--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,92 +1,93 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="style.css" />
-    <title>Détails du Produit</title>
-  </head>
-  <body>
-    <!-- Header with navigation bar -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"crossorigin="anonymous"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="../front-end/style.css" />
+        <title>Page- accueil de Onorico Peluche</title>
+        <script src="../back-end/index.js"></script>
+    </head>
+    <body>
     <header class="colorino">
-      <div class="container-fluid">
+        <div class="container-fluid">
         <div class="row">
-          <div class="col">
+            <div class="col">
             <nav class="d-flex navbar navbar-expand-lg navbar-light">
-              <a href="index.html" class="navbar-brand">
-                <img src="images/logo.png" alt="logo orinoco" width="186px">
-              </a>
-              <button
+                <a href="index.html" class="navbar-brand">
+                <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
+                </a>
+                <button
                 class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
                 <span class="navbar-toggler-icon"></span>
-              </button>
-              <ul
+                </button>
+                <ul
                 id="navbarContent"
                 class="justify-content-end navbar-nav collapse navbar-collapse">
                 <li class="nav-item active">
-                  <a href="index.html#products-list" class="nav-link">Produits</a>
+                    <a href="../front-end/index.html#products-list" class="nav-link">Produits</a>
                 </li>
                 <li class="nav-item">
-                  <a href="/secondssheets/cart.html" class="nav-link">Panier <span>0</span></a>
+                    <a href="../secondssheets/cart.html" class="nav-link">Panier<span> 0</span></a>
                 </li>
-              </ul>
+                </ul>
             </nav>
-          </div>
-        </div>
-      </div>
-    </header>
-    <main class="container">
-      <section class="row px-2 py-2">
-        <div class="card colorino first-card">
-            <img id="image" class="card-img-top object-cover rounded" src="/back-end/images/teddy_1.jpg" alt="Ours en peluche Norbert">
-            <div class="card-body">
-
-                    <label for="exampleDataList" id="name" class="form-label">Norbert</label>
-                    <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Choisissez votre couleur">
-                    <datalist id="datalistOptions">
-                      <option value="Tan">
-                      <option value="Chocolate">
-                      <option value="Black">
-                      <option value="White">
-                      <option value="">
-                    </datalist>
-
-                <div id="price" class="py-2">
-                  <p>29€</p>
-                </div>
-                <div id="description">
-                  <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
-                </div>
-                <a class="add-cart">
-                  <button type="button" class="bg-primary text-white my-1 font-weight-bold">Ajouter au panier</button>
-                </a>
             </div>
         </div>
-    </section> 
-        
+        </div>
+    </header>
+            <!--***********Teddies cards*************************-->
+    <main class="container">
+        <section class="row px-2 py-2 my-2">
+            <div class="card colorino col-10 py-2" id="main">
+              <template id="templateArticle">
+                <img class="imageUrl" class=" object-cover" src="" alt="ours en peluche">
+                <div class="card-body" >
+                  <div>
+                    <p class="objectId"></p>
+                  </div>     
+                    <select name="teddy colors" class="select-colors-teddy" id="select-colors-teddy" class="rounded bg-white">
+                      <option value="0"></option>
+                      <option value="1"></option>
+                      <option value="2"></option>
+                      <option value="3"></option>
+                      <option value="4"></option>
+                    </select>
+                    <div >
+                      <p class="name"></p>
+                    </div>
+                    <div >
+                      <p class="price"></p>
+                    </div>
+                    <div>
+                      <p class="description"></p>
+                    </div>
+                    <a href="../secondssheets/teddy.html" class="teddy_link" id="teddy_link">
+                    <p class="bg-white border border-dark text-center rounded col-6">En savoir plus</p>
+                    </a>
+                  </template>
+                </div>
+            </div>
+        </section> 
     </main>
     <footer class="container-fluid colorino">
         <a href="index.html">
-          <img src="images/logo.png" alt="logo orinoco" width="186px">
+        <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
         </a>
-          <div class="row text-center">
-              <div class="col">  
-                  <p class="text-center">Tous droits résevés - Orinoco</p>
-              </div>
+        <div class="row text-center">
+          <div class="col">  
+              <p class="text-center">Tous droits réservés - Orinoco</p>
           </div>
-  
-      </footer>
-  
-  
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  
-      <script src="/back-end/main.js"></script>
+        </div>
 
-      </body>
-  </html>
+    </footer>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+  </body>
+</html>
