--- a/secondssheets/cart.html
+++ b/secondssheets/cart.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col">
             <nav class="d-flex navbar navbar-expand-lg navbar-light">
-              <a href="../index.html" class="navbar-brand">
+              <a href="../front-end/index.html" class="navbar-brand">
                 <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
               </a>
               <button
@@ -31,7 +31,7 @@
                   <a href="../front-end/index.html#products-list" class="nav-link">Produits</a>
                 </li>
                 <li class="nav-item active">
-                  <a href="#" class="nav-link">Panier <span>0</span></a>
+                  <a href="#" class="nav-link">Panier <span> 0</span></a>
                 </li>
               </ul>
             </nav>
@@ -105,7 +105,7 @@
       </a>
         <div class="row text-center">
             <div class="col">  
-                <p class="text-center">Tous droits résevés - Orinoco</p>
+                <p class="text-center">Tous droits réservés - Orinoco</p>
             </div>
         </div>
 
