--- a/secondssheets/command_successfull.html
+++ b/secondssheets/command_successfull.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>  
+<html lang="fr">  
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -29,9 +29,6 @@
                     <li class="nav-item active">
                         <a href="../front-end/index.html#products-list" class="nav-link">Produits</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="cart.html" class="nav-link">Panier</a>
-                    </li>
                     </ul>
                 </nav>
                 </div>
@@ -53,7 +50,7 @@
             </a>
             <div class="row text-center">
               <div class="col">  
-                  <p class="text-center">Tous droits résevés - Orinoco</p>
+                  <p class="text-center">Tous droits réservés - Orinoco</p>
               </div>
             </div>
         </footer>
