--- a/front-end/teddy2.html
+++ b/front-end/teddy2.html
@@ -6,16 +6,18 @@
         <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"crossorigin="anonymous"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="../front-end/style.css" />
-        <title>Page- accueil de Onorico Peluche</title>
+        <title>Ours en peluche</title>
         <script src="../back-end/index.js"></script>
     </head>
     <body>
+
+        <!--*********************header*************************************-->
     <header class="colorino">
         <div class="container-fluid">
         <div class="row">
             <div class="col">
             <nav class="d-flex navbar navbar-expand-lg navbar-light">
-                <a href="index.html" class="navbar-brand">
+                <a href="../front-end/index.html" class="navbar-brand">
                 <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
                 </a>
                 <button
@@ -26,10 +28,10 @@
                 id="navbarContent"
                 class="justify-content-end navbar-nav collapse navbar-collapse">
                 <li class="nav-item active">
-                    <a href="../front-end/index.html#products-list" class="nav-link">Produits</a>
+                    <a href="../front-end/index.html" class="nav-link">Produits</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../secondssheets/cart.html" class="nav-link">Panier<span> 0</span></a>
+                    <a href="cart.html" class="nav-link">Panier<span> 0</span></a>
                 </li>
                 </ul>
             </nav>
@@ -37,36 +39,40 @@
         </div>
         </div>
     </header>
-            <!--***********Teddies cards*************************-->
+    <!--*****************teddy-card****************************************-->
     <main class="container">
-        <div class="row px-2 py-2 my-2">
-            <div class="card colorino col col-md-5 py-3" id="main">
-              <template id="template-article">
-                <img class="imageUrl" class=" object-cover" src="" alt="ours en peluche">
-                <div class="card-body" >  
-                    <select name="teddy colors" class="select-colors-teddy invisible" id="select-colors-teddy" class="rounded bg-white">
-                    </select>
-                    <div >
-                      <p class="name h5"></p>
-                    </div>
-                    <div >
-                      <p class="price font-weight-bold text-danger"></p>
-                    </div>
-                    <div>
-                      <p class="description"></p>
-                    </div>
-                    <a href="../secondssheets/teddy.html" id="teddy_link">
-                    <p class="bg-white border border-dark text-center rounded col-9 col-sm-5 col-md-9 col-lg-7">En savoir plus</p>
-                    </a>
-                </div>
-              </template>
-            </div>
-        </div>
-
-    </main>
-    
+      <section class="row px-2 py-2 my-2">
+          <div class="card colorino col-lg-5 col-md-5 py-2" id="main">
+            <template id="template-article">
+              <img class="imageUrl" class=" object-cover" src="" alt="ours en peluche">
+              <div class="card-body">
+                  <select name="teddy colors" class="select-colors-teddy" id="select-colors-teddy" class="rounded bg-white">
+                    <option value="0">Choisissez votre couleur</option>
+                    <option value="1"></option>
+                    <option value="2"></option>
+                    <option value="3"></option>
+                    <option value="4"></option>
+                  </select>
+                  <div >
+                    <p class="name h5"></p>
+                  </div>
+                  <div >
+                    <p class="price font-weight-bold"></p>
+                  </div>
+                  <div>
+                    <p class="description"></p>
+                  </div>
+                  <a href="../secondssheets/teddy.html" class="teddy_link" id="teddy_link">
+                  <p class="bg-primary text-dark font-weight-bold border border-dark text-center rounded col-9 col-sm-5 col-md-9 col-lg-">Ajouter au panier</p>
+                  </a>
+                </template>
+              </div>
+          </div>
+      </section> 
+  </main>
+  <!--*****************************footer***************************************************-->
     <footer class="container-fluid colorino">
-        <a href="index.html">
+        <a href="../front-end/index.html">
         <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
         </a>
         <div class="row text-center">
