--- a/secondssheets/cart.html
+++ b/secondssheets/cart.html
@@ -43,18 +43,25 @@
     <main class="container p-4">
       <div class="row mt-4">
         <!-- Products in the cart -->
-        <div class="col-12 col-md-6">
+        <div class="col">
           <h1 class="my-3">Votre Panier</h1>
-          <table class="table table-striped table-secondary table-hover align-items-start">
-            <thead class="font-weight-bold">
+          <table class="table table-secondary table-hover align-items-end font-size">
+            <thead class="">
               <tr>
-                <th>Produit</th>
-                <th>Quantité</th>
-                <th>Prix</th>
-                <th>total</th>
+                <th class="col-1">Produits</th>
+                <th class="col-1">Quantité</th>
+                <th class="col-1">Prix</th>
+                <th class="col-1">total</th>
+                <th class="col-1 px-1 text-center"> X</th>
               </tr>
             </thead>
-            <tbody id="panier"></tbody>
+            <tbody>
+              <tr class="colorino border rounded">
+                <td class="p-0 py-2 text-center" colspan="3">Total</td>
+                <td class="p-0 py-2 text-center totalPriceProducts">0 €</td>
+                <td class="p-0 py-2 text-center removeProduct"></td>
+              </tr>
+            </tbody>
           </table>
         </div>
         <!-- Order form-->
