--- a/secondssheets/cart.html
+++ b/secondssheets/cart.html
@@ -55,11 +55,11 @@
                 <th class="col-1 px-1 text-center"> X</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody class="injectedProduct">
+             
               <tr class="colorino border rounded">
                 <td class="p-0 py-2 text-center" colspan="3">Total</td>
-                <td class="p-0 py-2 text-center totalPriceProducts">0 €</td>
-                <td class="p-0 py-2 text-center removeProduct"></td>
+                <td class="px-3 py-2 text-left  totalPriceProducts" colspan="2">0 €</td>
               </tr>
             </tbody>
           </table>
