--- a/secondssheets/teddy.html
+++ b/secondssheets/teddy.html
@@ -7,8 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="../front-end/style.css" />
         <title>Ours en peluche</title>
-        <script src="../back/article.js"></script>
-        <script src=""></script>       
+        <script src="../back/article.js"></script> 
     </head>
     <body>
       <!--*****************************footer************************-->
@@ -43,10 +42,10 @@
     <main class="container">
       <template id="templateArticle" class="row main">
           <div class="card colorino col-12 py-3 my-2">
-              <img class="imageUrl"s src="" alt="ours en peluche">
+              <img class="imageUrl" src="" alt="ours en peluche">
               <div class="card-body">
-                  <p class="my-0">Choisissez une couleur</p>
-                  <select name="teddy colors" class="select-colors-teddy" id="select-colors-teddy" class="rounded bg-white">
+                  <label for="teddy_colors ">Choisissez une couleur</label>
+                  <select name="teddy_colors" class="select-colors-teddy" id="select-colors-teddy" class="rounded bg-white">
                   </select>
                   <div class="row">
                     <p class="name h5 my-3 col-9 col-sm-10 col-md-8 col-lg-9" id="name"></p>
