--- a/secondssheets/teddy.html
+++ b/secondssheets/teddy.html
@@ -10,7 +10,7 @@
         <script src="../back/article.js"></script> 
     </head>
     <body>
-      <!--*****************************footer************************-->
+      <!--*****************************header************************-->
     <header class="colorino">
         <div class="container-fluid">
         <div class="row">
@@ -26,7 +26,7 @@
                 <ul
                 id="navbarContent"
                 class="justify-content-end navbar-nav collapse navbar-collapse">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a href="../front-end/index.html" class="nav-link">Produits</a>
                 </li>
                 <li class="nav-item">
