--- a/secondssheets/teddy.html
+++ b/secondssheets/teddy.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="../front-end/style.css" />
         <title>Ours en peluche</title>
-        <script src="../back/article.js"></script> 
+        
+        <script src="../back/article.js"></script>
     </head>
     <body>
       <!--*****************************header************************-->
@@ -48,7 +49,7 @@
                   <select name="teddy_colors" class="select-colors-teddy" id="select-colors-teddy" class="rounded bg-white">
                   </select>
                   <div class="row">
-                    <p class="name h5 my-3 col-9 col-sm-10 col-md-8 col-lg-9" id="name"></p>
+                    <p class="name h5 my-3 col-9 col-sm-10 col-md-8 col-lg-9" id="name">o</p>
                     <p class="price my-3 font-weight-bold text-secondary bg-white px-3 border border-secondary"></p>
                   </div>
                   <div>
@@ -59,7 +60,7 @@
                   </button>
               </div>
             </div>
-        </template>
+      </template>
   </main>
   <!--****************************footer*******************************-->
     <footer class="container-fluid colorino">
@@ -80,7 +81,10 @@
 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+
+  
   <script src="../back/main.js"></script>
+
 
   </body>
 </html>
