--- a/secondssheets/teddy.html
+++ b/secondssheets/teddy.html
@@ -58,7 +58,7 @@
                   <div>
                     <p id="description" class="description"></p>
                   </div>
-                  <button id="button-submit" class="button-submit  button add-cart bg-primary font-weight-bold border border-dark text-center- rounded col-9 col-sm-5 col-md-10 col-lg-5">
+                  <button id="button-submit" type="submit" name="button-submit" class="button-submit  button add-cart bg-primary font-weight-bold border border-dark text-center- rounded col-9 col-sm-5 col-md-10 col-lg-5">
                     Ajouter au panier
                   </button>
               </div>
