--- a/secondssheets/cart.html
+++ b/secondssheets/cart.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../front-end/style.css" />
     
     <title>Panier - Orinoco</title>
-
+    <script src="../back/cart.js"></script>
 
   </head>
   <body>
@@ -130,7 +130,7 @@
 
     <script src="../back/main.js"></script>
         
-    <script src="../back/article.js"></script>
+
 
     </body>
 </html>
