--- a/secondssheets/cart.html
+++ b/secondssheets/cart.html
@@ -58,6 +58,7 @@
               </tr>
             </thead>
             <tbody class="tableCart " id="tableCart">
+              <td class="bg-white border text-center" colspan="5">Votre panier est vide</td>
             <tfoot>
               <tr class="totalCart colorino border rounded" id="totalCart">
                 <td class="col-1"></td>
