--- a/secondssheets/cart.html
+++ b/secondssheets/cart.html
@@ -63,7 +63,7 @@
               <tr class="totalCart colorino border rounded" id="totalCart">
                 <td class="col-1"></td>
                 <td class="col-1 p-0 py-2 text-center" colspan="1">Total</td>
-                <td class="col-1 px-3 py-2 text-left totalPriceProducts" colspan="1">0 €</td>
+                <td class="col-1 px-3 py-2 text-left TotalPriceArticle" colspan="1">0 €</td>
                 <td class="col-1"></td>
               </tr>
             </tfoot>
