--- a/secondssheets/teddy.html
+++ b/secondssheets/teddy.html
@@ -33,7 +33,7 @@
                     <a href="../front-end/index.html" class="nav-link">Produits</a>
                 </li>
                 <li class="nav-item">
-                    <a href="cart.html" class="nav-link">Panier <span> 0</span></a>
+                    <a href="cart.html" class="nav-link">Panier</a>
                 </li>
                 </ul>
             </nav>
