--- a/front-end/index.html
+++ b/front-end/index.html
@@ -34,7 +34,7 @@
                     <a href="../front-end/index.html" class="nav-link">Produits</a>
                 </li>
                 <li class="nav-item">
-                    <a href="../secondssheets/cart.html" class="nav-link">Panier <span> 0</span></a>
+                    <a href="../secondssheets/cart.html" class="nav-link">Panier</a>
                 </li>
                 </ul>
             </nav>
