--- a/secondssheets/cart.html
+++ b/secondssheets/cart.html
@@ -54,7 +54,7 @@
                 <th class="col-1 text-center">Produits</th>
                 <th class="col-1">Quantité</th>
                 <th class="col-1">Prix</th>
-                <th class="col-1 px-1 text-center remove" colspan="2"> X</th>
+                <th class="col-1 px-1 text-center remove" title="Supprimer le panier" colspan="2"><button class=" font-weight-bolder bolder" id="deleteAll">X</button></th>
               </tr>
             </thead>
             <tbody class="tableCart " id="tableCart">
@@ -81,7 +81,7 @@
               </div>
               <div class="form-group col-md-6">
                 <label for="firstName">Prénom</label>
-                <input required pattern="^[A-Za-z]*$" type="text" id="firstName" class="form-control" name="firstName"/>
+                <input  pattern="^[A-Za-z]*$" type="text" id="firstName" required class="form-control" name="firstName"/>
               </div>
             </div>
             <div class="form-row">
