--- a/secondssheets/cart.html
+++ b/secondssheets/cart.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="../front-end/style.css" />
-    
+
     <title>Panier - Orinoco</title>
 
   </head>
@@ -76,32 +76,32 @@
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="lastName">Nom</label>
-                <input required pattern="^[A-Za-z]*$" type="text" id="lastName" class="form-control" name="lastName"
+                <input required pattern="^[A-Za-z]*$" type="text" placeholder="Duchampignon" id="lastName" class="form-control" name="lastName"
                 />
               </div>
               <div class="form-group col-md-6">
                 <label for="firstName">Prénom</label>
-                <input  pattern="^[A-Za-z]*$" type="text" id="firstName" required class="form-control" name="firstName"/>
+                <input  pattern="^[A-Za-z]*$" placeholder="Benjamin" type="text" id="firstName" required class="form-control" name="firstName"/>
               </div>
             </div>
             <div class="form-row">
               <div class="form-group col-md-8">
                 <label for="address">Adresse</label>
-                <input required pattern="^[A-Za-z0-9\s,-.]*$" type="text" id="address" class="form-control" name="address"/>
+                <input required pattern="^[A-Za-z0-9\s,-.]*$" placeholder="7 rue du lutin" type="text" id="address" class="form-control" name="address"/>
               </div>
               <div class="form-group col-md-4">
                 <label for="zip">Code postal</label>
-                <input required id="zip" name="zip" type="text" class="form-control" pattern="[0-9]*">
+                <input required id="zip" name="zip" placeholder="49140" type="text" class="form-control" pattern="[0-9]*">
               </div>
               <div class="form-group col-md-12">
                 <label for="city">Ville</label>
-                <input required pattern="^[A-Za-z]*$" type="text" id="city" class="form-control" name="city"/>
+                <input required pattern="^[A-Za-z]*$" placeholder="ChaudronVille" type="text" id="city" class="form-control" name="city"/>
               </div>
             </div>
             <div class="form-row align-items-end">
               <div class="form-group col-12 col-md-12">
                 <label for="email">Adresse Electronique</label>
-                <input required type="email" id="email" class="form-control" name="email"/>
+                <input required placeholder="duchampignonbenjamin@leprechaun.tr" type="email" id="email" class="form-control" name="email"/>
               </div>
               <div class="form-group col-12 col-md-12 text-right">
                 <button type="submit" class="btn btn-success" id="sendForm">Commander</button>
