--- a/front-end/index.html
+++ b/front-end/index.html
@@ -15,6 +15,7 @@
 
     </head>
     <body>
+      <!----------------------------HEADER-->
     <header class="colorino">
         <div class="container-fluid">
         <div class="row">
@@ -62,7 +63,7 @@
                 </div>
               </template>
     </main>
-    
+    <!---------------------------FOOTER-->
     <footer class="container-fluid colorino">
         <a href="index.html">
         <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
