--- a/secondssheets/cart.html
+++ b/secondssheets/cart.html
@@ -111,6 +111,7 @@
         </div>
       </div>
     </main>
+    <!---------------------------FOOTER-->
     <footer class="container-fluid colorino">
       <a href="../front-end/index.html">
         <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
