--- a/secondssheets/command_successfull.html
+++ b/secondssheets/command_successfull.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col">
                 <nav class="d-flex navbar navbar-expand-lg navbar-light">
-                    <a href="index.html" class="navbar-brand">
+                    <a href="../front-end/index.html" class="navbar-brand">
                     <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
@@ -38,7 +38,7 @@
         </main>
             <!--   footer-->
         <footer class="container-fluid colorino">
-            <a href="index.html">
+            <a href="../front-end/index.html">
             <img src="../front-end/images/logo.png" alt="logo orinoco" width="186px">
             </a>
             <div class="row text-center">
