--- a/secondssheets/command_successfull.html
+++ b/secondssheets/command_successfull.html
@@ -31,7 +31,7 @@
                     <!--main-->
     
         <main class="flex flex-col justify-center w-full py-16 my-4 rounded-lg bg-oniPink">
-            <h1 class="mb-4 text-4xl font-weight-bold text-center">Nous vous remercions pour votre commande d'un montant de <span class="totalPrice"></span> numéro <span id="orderId">!</span> <br />À bientôt !</h1>
+            <h1 class="mb-4 text-4xl font-weight-bold text-center">Nous vous remercions pour votre commande d'un montant de <span class="totalPrice text-primary"></span> numéro <span id="orderId" class="text-danger"></span>.<br />À bientôt !</h1>
             <a class="row" href="../front-end/index.html">
             <button class="inline-block px-4 py-2 mx-auto text-center text-white bg-primary font-weight-bold rounded">Retour à l'accueil </button>
         </a>
